--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "webpack-merge": "^5.9.0"
   },
   "dependencies": {
-    "antlr4": "^4.13.1-patch-1",
+    "antlr4": "^4.13.2",
     "body-parser": "^1.20.2",
     "d3": "^7.9.0",
     "express": "^4.18.2",
