--- a/package.json
+++ b/package.json
@@ -9,18 +9,29 @@
   "license": "",
   "author": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node tests/grammar-test.js",
+    "test:grammar": "node tests/grammar-test.js",
+    "test:robinson": "node tests/robinson-arithmetic-test.js",
+    "test:formatter": "node tests/formatter-bracket-test.js && node tests/formatter-edge-cases-test.js",
+    "test:all": "npm run test:grammar && npm run test:robinson && npm run test:formatter",
     "start": "webpack serve --open --config webpack.config.dev.js",
-    "build": "webpack --config webpack.config.prod.js"
+    "build": "webpack --config webpack.config.prod.js",
+    "webpack": "cd my_antlr && antlr -Dlanguage=JavaScript Grammar.g4 && cd .. && webpack",
+    "antlr": "cd my_antlr && antlr -Dlanguage=JavaScript Grammar.g4",
+    "watch:antlr": "chokidar 'my_antlr/**/*.g4' -c 'npm run antlr'",
+    "watch:webpack": "webpack --config webpack.config.js --watch",
+    "dev": "npm-run-all --parallel watch:antlr watch:webpack"
   },
   "devDependencies": {
     "@babel/core": "^7.23.6",
     "@babel/preset-env": "^7.23.6",
     "babel-loader": "^9.1.3",
+    "chokidar-cli": "^3.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.10.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
+    "npm-run-all": "^4.1.5",
     "style-loader": "^3.3.4",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
